--- a/exercises/ex09/SimpyDemos.ipynb
+++ b/exercises/ex09/SimpyDemos.ipynb
@@ -315,11 +315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simpy([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Check #1 for Understanding\n"
+    "# TODO: Check #1 for Understanding\n",
+    "\n",
+    "from Simpy import Simpy\n",
+    "\n",
+    "simpy_obj = Simpy([])\n",
+    "simpy_obj.fill(2.0 ** 0, 16)\n",
+    "Simpy([]).arange(2.0 ** 0, 2.0 ** 15, 1.0)\n",
+    "powers_of_two = simpy_obj ** 2.0\n",
+    "print(simpy_obj)"
    ]
   },
   {
@@ -543,14 +559,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of precipitation on days with max temperature > 32.0: 0.30000000000000004\n"
+     ]
+    }
+   ],
    "source": [
     "max_temps = Simpy([21.0, 30.0, 41.0, 31.0, 45.0, 31.5])\n",
     "precip = Simpy([0.0, 1.5, 0.1, 0.3, 0.2, 0.8])\n",
     "\n",
-    "# TODO: Your solution goes here."
+    "mask = max_temps > 32.0\n",
+    "filtered_precip = precip[mask]\n",
+    "sum_precip = filtered_precip.sum()\n",
+    "print(f\"Sum of precipitation on days with max temperature > 32.0: {sum_precip}\")"
    ]
   }
  ],
@@ -570,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
